Updates made to frontend to accommodate new objects. Backend controllers added to display those objects as dropdowns. Entity controller added to allow for user login functionality.