@@ -1,5 +1,16 @@
 package com.sullivan.disc.service;
 
+/*
+ * Shawn Sullivan
+ * CEN 3024C-31774
+ * July 8, 2025
+ * The DiscService class handles all business logic for the DISC app and acts as an intermediary between the repository
+ * layer and the controller endpoint.
+ * Note: Spring-managed repositories are temporarily unused due to project requirement for dynamic user DB config.
+ * Kept in code for future use because I would like to expand on this project and/or use it as a learning tool
+ * later.
+ */
+
 import com.sullivan.disc.dto.DiscCreateDTO;
 import com.sullivan.disc.dto.DiscDTO;
 import com.sullivan.disc.dto.DiscUpdateDTO;
@@ -13,7 +24,11 @@ import com.sullivan.disc.repository.ContactRepository;
 import com.sullivan.disc.repository.DiscRepository;
 import com.sullivan.disc.repository.ManufacturerRepository;
 import com.sullivan.disc.repository.MoldRepository;
+import com.sullivan.disc.util.CustomDataSourceManager;
 import com.sullivan.disc.util.DiscValidator;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityTransaction;
+import jakarta.persistence.TypedQuery;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -29,208 +44,472 @@ import java.util.stream.Collectors;
 @Service
 public class DiscService {
 
-    private final DiscRepository discRepository;
+    //private final DiscRepository discRepository;
+    //private final ContactRepository contactRepository;
+    //private final ManufacturerRepository manufacturerRepository;
+    //private final MoldRepository moldRepository;
     private final DiscMapper discMapper;
-    private final ContactRepository contactRepository;
-    private final ManufacturerRepository manufacturerRepository;
-    private final MoldRepository moldRepository;
+    private final CustomDataSourceManager dataSourceManager;
 
-    public DiscService(DiscRepository discRepository,
-                       DiscMapper discMapper,
-                       ContactRepository contactRepository,
-                       ManufacturerRepository manufacturerRepository,
-                       MoldRepository moldRepository) {
-
-        this.discRepository = discRepository;
+    public DiscService(DiscMapper discMapper,
+                      CustomDataSourceManager dataSourceManager) {
         this.discMapper = discMapper;
-        this.contactRepository = contactRepository;
-        this.manufacturerRepository = manufacturerRepository;
-        this.moldRepository = moldRepository;
+        this.dataSourceManager = dataSourceManager;
     }
 
+    private EntityManager getEntityManager() {
+        return dataSourceManager.getEntityManagerFactory().createEntityManager();
+    }
+
+    /*
+     * Method: GetDiscByBooleanAttribute
+     * Description: Query for getAllReturned and getAllSold is repetitive so created a method to call instead
+     * Args: String attribute
+     * Return: List<DiscDTO>
+     */
+    private List<DiscDTO> getDiscByBooleanAttribute(String attribute) {
+        EntityManager em = getEntityManager();
+        String jpql = """
+                SELECT d FROM Disc d
+                JOIN FETCH d.contact
+                JOIN FETCH d.manufacturer
+                JOIN FETCH d.mold
+                WHERE d.%s = true
+                """.formatted(attribute);
+
+        List<Disc> discs = em.createQuery(jpql, Disc.class).getResultList();
+        return discs.stream().map(discMapper::discToDiscDTO).collect(Collectors.toList());
+    }
+
+    /*
+     * Method: createDisc
+     * Description: Create a new disc record in the database
+     * Args: DiscCreateDTO
+     * Return: DiscDTO
+     */
     public DiscDTO createDisc(DiscCreateDTO dto) {
-        // Check if contact already exists in DB
-        Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
-                dto.getContact().getFirstName(),
-                dto.getContact().getLastName(),
-                dto.getContact().getPhone()
-        );
-        Contact contact = existingContact.orElseGet(() -> {
-            Contact newContact = new Contact();
-            newContact.setFirstName(dto.getContact().getFirstName());
-            newContact.setLastName(dto.getContact().getLastName());
-            newContact.setPhoneNumber(dto.getContact().getPhone());
-            return contactRepository.save(newContact);
-        });
+        EntityManager em = getEntityManager();
+        EntityTransaction tx = em.getTransaction();
+        tx.begin();
+        // Check if contact already exists in DB if not, create
+        try {
+            TypedQuery<Contact> contactQuery = em.createQuery(
+                    "SELECT c FROM Contact c WHERE c.firstName = :firstName " +
+                            "AND c.lastName = :lastName " +
+                            "AND c.phoneNumber = :phoneNumber", Contact.class
+            );
+            contactQuery.setParameter("firstName", dto.getContact().getFirstName());
+            contactQuery.setParameter("lastName", dto.getContact().getLastName());
+            contactQuery.setParameter("phoneNumber", dto.getContact().getPhone());
+            List<Contact> contacts = contactQuery.getResultList();
+            Contact contact = contacts.isEmpty() ? new Contact(null,
+                    dto.getContact().getFirstName(),
+                    dto.getContact().getLastName(),
+                    dto.getContact().getPhone()) : contacts.get(0);
+            if (contact.getContact_id() == null) {
+                em.persist(contact);
+            }
 
-        // Retrieve manufacturer and mold by ID sent from UI
-        Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturer().getManufacturerId()).get();
-        Mold mold = moldRepository.findById(dto.getMold().getMoldId()).get();
+            Manufacturer manufacturer = em.find(Manufacturer.class, dto.getManufacturer().getManufacturerId());
+            Mold mold = em.find(Mold.class, dto.getMold().getMoldId());
 
-        // Convert DTO and other objects to Disc object
-        Disc disc = discMapper.discCreateDTOtoDisc(dto, manufacturer, mold, contact);
-        discRepository.save(disc);
-        return discMapper.discToDiscDTO(disc);
+            Disc disc = discMapper.discCreateDTOtoDisc(dto, manufacturer, mold, contact);
+            em.persist(disc);
+
+            tx.commit();
+            return discMapper.discToDiscDTO(disc);
+        }
+        catch (Exception e) {
+            tx.rollback();
+            throw new RuntimeException("Failed to create disc.", e);
+        }
+        finally {
+            em.close();
+        }
     }
+//        Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
+//                dto.getContact().getFirstName(),
+//                dto.getContact().getLastName(),
+//                dto.getContact().getPhone()
+//        );
+//        Contact contact = existingContact.orElseGet(() -> {
+//            Contact newContact = new Contact();
+//            newContact.setFirstName(dto.getContact().getFirstName());
+//            newContact.setLastName(dto.getContact().getLastName());
+//            newContact.setPhoneNumber(dto.getContact().getPhone());
+//            return contactRepository.save(newContact);
+//        });
+//
+//        // Retrieve manufacturer and mold by ID sent from UI
+//        Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturer().getManufacturerId()).get();
+//        Mold mold = moldRepository.findById(dto.getMold().getMoldId()).get();
+//
+//        // Convert DTO and other objects to Disc object
+//        Disc disc = discMapper.discCreateDTOtoDisc(dto, manufacturer, mold, contact);
+//        discRepository.save(disc);
+//        return discMapper.discToDiscDTO(disc);
+//    }
 
-    // True and false values used in Controller to determine confirmation or failure message
+    /*
+     * Method: GetDiscByBooleanAttribute
+     * Description: Delete a disc from the database records. True and false values signal to the control and
+     * frontend for user feedback
+     * Args: Integer
+     * Return: boolean
+     */
     public boolean deleteDisc(Integer id) {
-        if (discRepository.existsById(id)) {
-            discRepository.deleteById(id);
+            EntityManager em = getEntityManager();
+            EntityTransaction tx = em.getTransaction();
+            Disc disc = em.find(Disc.class, id);
+            if (disc == null) {
+                em.close();
+                return false;
+            }
+            tx.begin();
+            em.remove(disc);
+            tx.commit();
             return true;
         }
-        return false;
-    }
+//        if (discRepository.existsById(id)) {
+//            discRepository.deleteById(id);
+//            return true;
+//        }
+//        return false;
+//    }
 
+    /*
+     * Method: getAllDiscs
+     * Description: Query database for all disc records then return a list of DiscDTOs to supply to frontend
+     * Args: None
+     * Return: List<DiscDTO>
+     */
     public List<DiscDTO> getAllDiscs() {
-        return discRepository.findAll()
-                             .stream()
-                             .map(discMapper::discToDiscDTO)
-                             .collect(Collectors.toList());
+        EntityManager em = getEntityManager();
+        List<Disc> discs = em.createQuery("""
+                SELECT c FROM Disc c
+                JOIN FETCH c.contact
+                JOIN FETCH c.manufacturer
+                JOIN FETCH c.mold""", Disc.class).getResultList();
+        em.close();
+        return discs.stream().map(discMapper::discToDiscDTO).collect(Collectors.toList());
     }
+//        return discRepository.findAll()
+//                             .stream()
+//                             .map(discMapper::discToDiscDTO)
+//                             .collect(Collectors.toList());
+//    }
 
+    /*
+     * Method: getAllReturned
+     * Description: Query database for all discs marked returned == true. Utilizes getDiscByBooleanAttribute helper.
+     * Args: None
+     * Return: List<DiscDTO>
+     */
     public List<DiscDTO> getAllReturned() {
-        return discRepository.findByReturnedTrue()
-                             .stream()
-                             .map(discMapper::discToDiscDTO)
-                             .collect(Collectors.toList());
+        return getDiscByBooleanAttribute("returned");
     }
+//        return discRepository.findByReturnedTrue()
+//                             .stream()
+//                             .map(discMapper::discToDiscDTO)
+//                             .collect(Collectors.toList());
+//    }
 
+    /*
+     * Method: getAllSold
+     * Description: Query database for all discs marked sold == true. Utilizes getDiscByBooleanAttribute helper.
+     * Args: None
+     * Return: List<DiscDTO>
+     */
     public List<DiscDTO> getAllSold() {
-        return discRepository.findBySoldTrue()
-                             .stream()
-                             .map(discMapper::discToDiscDTO)
-                             .collect(Collectors.toList());
+        return getDiscByBooleanAttribute("sold");
     }
+//        return discRepository.findBySoldTrue()
+//                             .stream()
+//                             .map(discMapper::discToDiscDTO)
+//                             .collect(Collectors.toList());
+//    }
 
-    public Optional<DiscDTO> findByID(int id) {
-        return discRepository.findById(id).map(discMapper::discToDiscDTO);
+    /*
+     * Method: findByID
+     * Description: Query database for a specific disc record with the provided disc_id returns an Optional incase
+     * ID does not exist
+     * Args: Integer id
+     * Return: Optional<DiscDTO>
+     */
+    public Optional<DiscDTO> findByID(Integer id) {
+        EntityManager em = getEntityManager();
+        Disc disc = em.find(Disc.class, id);
+        em.close();
+        return Optional.ofNullable(disc).map(discMapper::discToDiscDTO);
     }
+//        return discRepository.findById(id).map(discMapper::discToDiscDTO);
+//    }
 
+    /*
+     * Method: findByLastName
+     * Description: Query database for a specific disc record with the provided last name. Returns a list of discs to
+     * display on frontend
+     * Args: String lastName
+     * Return: List<DiscDTO>
+     */
     public List<DiscDTO> findByLastName(String lastName) {
-        return discRepository.findByContact_LastName(lastName).stream().map(discMapper::discToDiscDTO)
-                .collect(Collectors.toList());
+        EntityManager em = getEntityManager();
+        List<Disc> discs = em.createQuery("SELECT c FROM Disc c WHERE c.contact.lastName = :lastName", Disc.class)
+                .setParameter("lastName", lastName)
+                .getResultList();
+        em.close();
+        return discs.stream().map(discMapper::discToDiscDTO).toList();
     }
+//        return discRepository.findByContact_LastName(lastName).stream().map(discMapper::discToDiscDTO)
+//                .collect(Collectors.toList());
+//    }
 
+    /*
+     * Method: findByPhoneNumber
+     * Description: Query database for a specific disc record with the provided phone number. Returns a list of discs to
+     * display on frontend
+     * Args: String phoneNumber
+     * Return: List<DiscDTO>
+     */
     public List<DiscDTO> findByPhoneNumber(String phoneNumber) {
-        return discRepository.findByContact_PhoneNumber(phoneNumber).stream().map(discMapper::discToDiscDTO)
-                .collect(Collectors.toList());
+        EntityManager em = getEntityManager();
+        List<Disc> discs = em.createQuery("SELECT c FROM Disc c WHERE c.contact.phoneNumber = :phone", Disc.class)
+                .setParameter("phone", phoneNumber)
+                .getResultList();
+        em.close();
+        return discs.stream().map(discMapper::discToDiscDTO).toList();
     }
+//        return discRepository.findByContact_PhoneNumber(phoneNumber).stream().map(discMapper::discToDiscDTO)
+//                .collect(Collectors.toList());
+//    }
 
+
+    /*
+     * Method: importFromTextFile
+     * Description: Inserts new records into the database by reading and interpreting data from a text file delimited
+     * by "-" characters
+     * Args: MultipartFile file
+     * Return: ImportResultDTO
+     */
     public ImportResultDTO importFromTextFile(MultipartFile file) throws IOException {
         List<String> successes = new ArrayList<>();
         List<String> failures = new ArrayList<>();
 
-        BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()));
-        String line;
-        int lineCount = 0;
+        EntityManager em = getEntityManager();
+        EntityTransaction tx = em.getTransaction();
+        tx.begin();
 
-        while ((line = reader.readLine()) != null) {
-            lineCount++;
-            String[] attributes = line.split("-");
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
+            String line;
+            int lineCount = 0;
 
-            if (attributes.length != 13) {
-                failures.add("Line " + lineCount + ": Wrong number of attributes.");
-                continue;
+            while ((line = reader.readLine()) != null) {
+                lineCount++;
+                String[] attributes = line.split("-");
+
+                if (attributes.length != 13) {
+                    failures.add("Line " + lineCount + ": Wrong number of attributes.");
+                    continue;
+                }
+
+                try {
+                    String manufacturerName = DiscValidator.validateManufacturer(attributes[0].trim());
+                    String moldName = DiscValidator.validateMold(attributes[1].trim());
+                    String plastic = DiscValidator.validatePlastic(attributes[2].trim());
+                    String color = DiscValidator.validateColor(attributes[3].trim());
+                    int condition =  DiscValidator.validateCondition(attributes[4].trim());
+                    String description = DiscValidator.validateDescription(attributes[5].trim());
+                    String contactFirstName = DiscValidator.validateContactName(attributes[6].trim());
+                    String contactLastName = DiscValidator.validateContactName(attributes[7].trim());
+                    String contactPhone = DiscValidator.validateContactPhone(attributes[8].trim());
+                    String foundAt = DiscValidator.validateFoundAt(attributes[9].trim());
+                    boolean returned = DiscValidator.validateBooleanInput(attributes[10].trim(), "Returned");
+                    boolean sold = DiscValidator.validateBooleanInput(attributes[11].trim(), "Sold");
+                    BigDecimal MSRP = DiscValidator.validatePositiveBigDecimal(attributes[12].trim(), "MSRP");
+
+                    // New custom manager code to validate MFR, Mold, Contact
+                    TypedQuery<Manufacturer> mfQuery = em.createQuery(
+                            "SELECT m FROM Manufacturer m WHERE m.manufacturer = :manufacturer", Manufacturer.class);
+                    mfQuery.setParameter("manufacturer", manufacturerName);
+                    Manufacturer manufacturer = mfQuery.getResultList().stream().findFirst().orElseThrow(() ->
+                            new RuntimeException("Manufacturer " + manufacturerName + " not found"));
+
+                    TypedQuery<Mold> moldQuery = em.createQuery(
+                            "SELECT m FROM Mold m WHERE m.mold = :mold AND m.manufacturer = :manufacturer", Mold.class);
+                    moldQuery.setParameter("mold", moldName);
+                    moldQuery.setParameter("manufacturer", manufacturer);
+                    Mold mold = moldQuery.getResultStream().findFirst().orElseThrow(() ->
+                            new RuntimeException("Mold " + moldName + " not found"));
+
+                    TypedQuery<Contact> contactQuery = em.createQuery(
+                            "SELECT c FROM Contact c WHERE c.firstName = :firstName " +
+                                    "AND c.lastName = :lastName " +
+                                    "AND c.phoneNumber = :phoneNumber", Contact.class);
+                    contactQuery.setParameter("firstName", contactFirstName);
+                    contactQuery.setParameter("lastName", contactLastName);
+                    contactQuery.setParameter("phoneNumber", contactPhone);
+                    Contact contact = contactQuery.getResultStream()
+                            .findFirst()
+                            .orElseGet(() -> {
+                                Contact c = new Contact(null, contactFirstName, contactLastName, contactPhone);
+                                em.persist(c);
+                                return c;
+                            });
+
+    //                // Validate and assign manufacturer
+    //                Manufacturer manufacturer = manufacturerRepository.findByManufacturer(manufacturerName)
+    //                        .orElseThrow(() -> new RuntimeException("Manufacturer " + manufacturerName + " not found"));
+    //
+    //                // Validate and assign mold
+    //                Mold mold = moldRepository.findByMoldAndManufacturer(moldName, manufacturer)
+    //                        .orElseThrow(() -> new RuntimeException("Mold " + moldName + " not found"));
+    //
+    //                // Validate and assign contact information
+    //                Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
+    //                        contactFirstName,
+    //                        contactLastName,
+    //                        contactPhone
+    //                );
+    //                Contact contact = existingContact.orElseGet(() ->
+    //                    contactRepository.save( new Contact(
+    //                            null,
+    //                            contactFirstName,
+    //                            contactLastName,
+    //                            contactPhone
+    //                    )));
+                    // Create disc from inputs
+                    Disc disc = new Disc(null,
+                                         manufacturer,
+                                         mold,
+                                         plastic,
+                                         color,
+                                         condition,
+                                         description,
+                                         contact,
+                                         foundAt,
+                                         returned,
+                                         sold,
+                                         MSRP,
+                                        null);
+                    em.persist(disc);
+    //                discRepository.save(disc);
+                    successes.add("Line " + lineCount + ": Successfully imported. Disc: " + disc.getDiscID() + " created.");
+                }
+                catch (IllegalArgumentException e) {
+                    failures.add("Line " + lineCount + ": " + e.getMessage());
+                }
             }
-
-            try {
-                String manufacturerName = DiscValidator.validateManufacturer(attributes[0].trim());
-                String moldName = DiscValidator.validateMold(attributes[1].trim());
-                String plastic = DiscValidator.validatePlastic(attributes[2].trim());
-                String color = DiscValidator.validateColor(attributes[3].trim());
-                int condition =  DiscValidator.validateCondition(attributes[4].trim());
-                String description = DiscValidator.validateDescription(attributes[5].trim());
-                String contactFirstName = DiscValidator.validateContactName(attributes[6].trim());
-                String contactLastName = DiscValidator.validateContactName(attributes[7].trim());
-                String contactPhone = DiscValidator.validateContactPhone(attributes[8].trim());
-                String foundAt = DiscValidator.validateFoundAt(attributes[9].trim());
-                boolean returned = DiscValidator.validateBooleanInput(attributes[10].trim(), "Returned");
-                boolean sold = DiscValidator.validateBooleanInput(attributes[11].trim(), "Sold");
-                BigDecimal MSRP = DiscValidator.validatePositiveBigDecimal(attributes[12].trim(), "MSRP");
-
-                // Validate and assign manufacturer
-                Manufacturer manufacturer = manufacturerRepository.findByManufacturer(manufacturerName)
-                        .orElseThrow(() -> new RuntimeException("Manufacturer " + manufacturerName + " not found"));
-
-                // Validate and assign mold
-                Mold mold = moldRepository.findByMoldAndManufacturer(moldName, manufacturer)
-                        .orElseThrow(() -> new RuntimeException("Mold " + moldName + " not found"));
-
-                // Validate and assign contact information
-                Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
-                        contactFirstName,
-                        contactLastName,
-                        contactPhone
-                );
-                Contact contact = existingContact.orElseGet(() ->
-                    contactRepository.save( new Contact(
-                            null,
-                            contactFirstName,
-                            contactLastName,
-                            contactPhone
-                    )));
-
-                Disc disc = new Disc(null,
-                                     manufacturer,
-                                     mold,
-                                     plastic,
-                                     color,
-                                     condition,
-                                     description,
-                                     contact,
-                                     foundAt,
-                                     returned,
-                                     sold,
-                                     MSRP,
-                                    null);
-
-                discRepository.save(disc);
-                successes.add("Line " + lineCount + ": Successfully imported. Disc: " + disc.getDiscID() + " created.");
-            }
-            catch (IllegalArgumentException e) {
-                failures.add("Line " + lineCount + ": " + e.getMessage());
-            }
+            tx.commit();
+        }
+        catch (Exception e) {
+        tx.rollback();
+        throw new RuntimeException("Failed to import discs: " + e.getMessage(), e);
+        }
+        finally {
+            em.close();
         }
         return new ImportResultDTO(successes, failures);
     }
+    /*
+     * Method: updateDisc
+     * Description: Updates a DB record based on information provided in DTO from frontend
+     * Args: Integer id, DiscUpdateDTO dto
+     * Return: Optional<DTO>
+     */
     public Optional<DiscDTO> updateDisc(Integer id, DiscUpdateDTO dto) {
-        return discRepository.findById(id).map(existing -> {
-            // Create and validate manufacturer
-            Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturer().getManufacturerId()).get();
+        EntityManager em = getEntityManager();
+        EntityTransaction tx = em.getTransaction();
+        tx.begin();
+        try {
+            // Check if disc exists (should always exist)
+            Disc disc = em.find(Disc.class, id);
+            if (disc == null) {
+                return Optional.empty();
+            }
 
-            // Create and validate mold
-            Mold mold = moldRepository.findById(dto.getMold().getMoldId()).get();
+            // Set mold and manufacturer from DTO
+            Manufacturer manufacturer = em.find(Manufacturer.class, dto.getManufacturer().getManufacturerId());
+            Mold mold = em.find(Mold.class, dto.getMold().getMoldId());
 
-            // Check or create new contact
-            Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
-                    dto.getContact().getFirstName(),
-                    dto.getContact().getLastName(),
-                    dto.getContact().getPhone()
+            // Lookup or create given contact
+            TypedQuery<Contact> contactQuery = em.createQuery(
+                    "SELECT c from Contact c WHERE c.firstName = :firstName " +
+                            "AND c.lastName = :lastName " +
+                            "AND c.phoneNumber = :phoneNumber", Contact.class
             );
+            contactQuery.setParameter("firstName", dto.getContact().getFirstName());
+            contactQuery.setParameter("lastName", dto.getContact().getLastName());
+            contactQuery.setParameter("phoneNumber", dto.getContact().getPhone());
+            List<Contact> contacts = contactQuery.getResultList();
+            Contact contact = contacts.isEmpty() ? new Contact(null,
+                                                                dto.getContact().getFirstName(),
+                                                                dto.getContact().getLastName(),
+                                                                dto.getContact().getPhone()) : contacts.get(0);
+            if (contact.getContact_id() == null) {
+                em.persist(contact);
+            }
 
-            Contact contact = existingContact.orElseGet(() -> contactRepository.save(
-                    new Contact(null,
-                                dto.getContact().getFirstName(),
-                                dto.getContact().getLastName(),
-                                dto.getContact().getPhone())
-            ));
+            // Apply updates to disc
+            disc.setManufacturer(manufacturer);
+            disc.setMold(mold);
+            disc.setPlastic(dto.getPlastic());
+            disc.setColor(dto.getColor());
+            disc.setCondition(dto.getCondition());
+            disc.setDescription(dto.getDescription());
+            disc.setContact(contact);
+            disc.setFoundAt(dto.getFoundAt());
+            disc.setReturned(dto.isReturned());
+            disc.setSold(dto.isSold());
+            disc.setMsrp(dto.getMSRP());
 
-            // Update all disc fields
-            existing.setManufacturer(manufacturer);
-            existing.setMold(mold);
-            existing.setPlastic(dto.getPlastic());
-            existing.setColor(dto.getColor());
-            existing.setCondition(dto.getCondition());
-            existing.setDescription(dto.getDescription());
-            existing.setContact(contact);
-            existing.setFoundAt(dto.getFoundAt());
-            existing.setReturned(dto.isReturned());
-            existing.setSold(dto.isSold());
-            existing.setMsrp(dto.getMSRP());
-
-            // Save disc
-            return discMapper.discToDiscDTO(discRepository.save(existing));
-        });
+            em.merge(disc);
+            tx.commit();
+            return Optional.of(discMapper.discToDiscDTO(disc));
+        }
+        catch (Exception e) {
+            tx.rollback();
+            throw new RuntimeException("Failed to update disc.", e);
+        }
+        finally {
+            em.close();
+        }
     }
+//        return discRepository.findById(id).map(existing -> {
+//            // Create and validate manufacturer
+//            Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturer().getManufacturerId()).get();
+//
+//            // Create and validate mold
+//            Mold mold = moldRepository.findById(dto.getMold().getMoldId()).get();
+//
+//            // Check or create new contact
+//            Optional<Contact> existingContact = contactRepository.findByFirstNameAndLastNameAndPhoneNumber(
+//                    dto.getContact().getFirstName(),
+//                    dto.getContact().getLastName(),
+//                    dto.getContact().getPhone()
+//            );
+//
+//            Contact contact = existingContact.orElseGet(() -> contactRepository.save(
+//                    new Contact(null,
+//                                dto.getContact().getFirstName(),
+//                                dto.getContact().getLastName(),
+//                                dto.getContact().getPhone())
+//            ));
+//
+//            // Update all disc fields
+//            existing.setManufacturer(manufacturer);
+//            existing.setMold(mold);
+//            existing.setPlastic(dto.getPlastic());
+//            existing.setColor(dto.getColor());
+//            existing.setCondition(dto.getCondition());
+//            existing.setDescription(dto.getDescription());
+//            existing.setContact(contact);
+//            existing.setFoundAt(dto.getFoundAt());
+//            existing.setReturned(dto.isReturned());
+//            existing.setSold(dto.isSold());
+//            existing.setMsrp(dto.getMSRP());
+//
+//            // Save disc
+//            return discMapper.discToDiscDTO(discRepository.save(existing));
+//        });
+//    }
 }
